wireguard/service.udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-wg
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.0.56
spec:
  type: LoadBalancer
  ports:
    - name: wg
      port: 30000
      nodePort: 30000
      protocol: UDP
      targetPort: wg
