wireguard/service.ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-http
  annotations:
    metallb.universe.tf/address-pool: "dmz-pool"
    metallb.universe.tf/loadBalancerIPs: "10.0.0.57"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 51821
      protocol: TCP
      targetPort: http
